infra/k8s-prod/realestate-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realestate-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realestate-mongo
  template:
    metadata:
      labels:
        app: realestate-mongo
    spec:
      containers:
        - name: realestate-mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-claim0
---
apiVersion: v1
kind: Service
metadata:
  name: realestate-mongo-srv
spec:
  type: NodePort
  selector:
    app: realestate-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
      nodePort: 30018
      simacluster.iwsya.mongodb.net
